--- a/.github/workflows/zap-run.yml
+++ b/.github/workflows/zap-run.yml
@@ -1,19 +1,5 @@
-on: [push]
-
-jobs:
-  zap_scan:
-    runs-on: ubuntu-latest
-    name: Scan the webapplication
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
-      - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.2.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
-          target: 'https://staging-app.propine.com'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+steps:
+  - name: ZAP Scan
+    uses: zaproxy/action-full-scan@v0.4.0
+    with:
+      target: ‘https://sandbox-app.propine.com'
