--- a/.github/workflows/zap-run.yml
+++ b/.github/workflows/zap-run.yml
@@ -1,5 +1,14 @@
-steps:
-  - name: ZAP Scan
-    uses: zaproxy/action-full-scan@v0.4.0
-    with:
-      target: ‘https://sandbox-app.propine.com'
+on:
+  schedule:
+    # Runs every day At 01:00.
+    - cron:  '0 1 * * *'
+
+jobs:
+  zap_scan:
+    runs-on: ubuntu-latest
+    name: Scan ZAP website
+    steps:
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.3.0
+        with:
+          target: '‘https://sandbox-app.propine.com'
