--- a/.github/workflows/zapapiscan.yml
+++ b/.github/workflows/zapapiscan.yml
@@ -1,8 +1,8 @@
 on:
   workflow_dispatch:
   schedule:
-    # Runs every day At 01:00.
-    - cron:  '0 1 * * *'
+    # Runs every Thu At 01:00.
+    - cron:  '0 1 * * 4'
 
 jobs:
   zap_scan:
